# tpm2-totp

./: .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Doxyfile.in  INSTALL.md  LICENSE  MAINTAINERS  Makefile.am  README.md  RELEASE.md  SECURITY.md  bootstrap  configure.ac
.ci/: ci.sh  coverity.run  docker.env  docker.run  get_deps.sh
.github/workflows/: codeql.yml  coverity.yml  docker.yml  main.yml  whitespace.yml
include/: tpm2-totp.h
man/: tpm2-totp.1.md
src/: gtpm2-totp.c  gtpm2-totp.ui  libtpm2-totp.c  plymouth-tpm2-totp.c  tpm2-totp-tcti.c  tpm2-totp-tcti.h  tpm2-totp.c
test/: libtpm2-totp.c  libtpm2-totp.sh  mkinitcpio-tpm2-totp.sh  plymouth-tpm2-totp.sh  sh_log_compiler.sh  tpm2-totp.sh
